@@ -1,39 +1,7 @@
-.vscode/settings.json
+.vscode/*
 config.ini
 jsontest.py
-__pycache__/configupdate.cpython-37.pyc
-__pycache__/customfunctions.cpython-37.pyc
-__pycache__/selfupdate.cpython-37.pyc
-beta/configupdate.py
-beta/configupdate.pyc
-beta/customfunctions.py
-beta/customfunctions.pyc
-beta/jackettupdate.py
-beta/selfupdate.py
-beta/__pycache__/configupdate.cpython-37.pyc
-beta/__pycache__/customfunctions.cpython-37.pyc
-beta/changelog.txt
-beta/jackettupdate.service
-beta/jackettupdate.timer
-beta/LICENSE
-beta/readme
+beta/*
 .gitignore
-beta/.gitignore
-beta/README.md
-beta/selfupdate.pyc
-beta/test/configupdate.py
-beta/test/configupdate.pyc
-beta/test/customfunctions.py
-beta/test/customfunctions.pyc
-beta/test/jackettupdate.py
-beta/test/selfupdate.py
-beta/test/testzip.py
-beta/test/download.py
-beta/test/v1.4.zip
-selfupdate.pyc
-customfunctions.pyc
-beta/tartest.py
-beta/Jackett.Binaries.Mono.tar.gz
-__pycache__/configread.cpython-37.pyc
-__pycache__/jackettupdate.cpython-37.pyc
-__pycache__/mainupdate.cpython-37.pyc
+/.vs/*
+*.pyc
